// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeterministicArchivist find with no schema finds address history 1`] = `
[
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
      "81b707afc5742a5501a4fac4ad56132928ce711de36de7aeda936e08066cfcad",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      "e307ab9ba8ea876135ae22ff47114513cf7fefe024dab21d89d8584378df6b11",
    ],
    "query": "81b707afc5742a5501a4fac4ad56132928ce711de36de7aeda936e08066cfcad",
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
  {
    "payloads": [
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "schema": "network.xyo.query.archivist.insert",
  },
]
`;

exports[`DeterministicArchivist find with schema for BoundWitness finds multiple bws 1`] = `
[
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
      "1c9033e467d6877e2c84a70b29212a585bd6fd448bccfcc12adf0505c18984f6",
    ],
    "payload_schemas": [
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "cf1250c9c7fb1890bc7b9125f5626eb9487d610ebb1645bd3c9ba7eb236c5d72",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      "e96e1a5052efd4a7af66723ff1b191e3edf188409e4ccb958153ecc3ab1a9193",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist find with schema for Payload finds single payload 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist get gets multiple payloads 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
  {
    "nonce": 2,
    "schema": "network.xyo.test",
  },
]
`;

exports[`DeterministicArchivist get gets single payload 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist insert inserts multiple payloads 1`] = `
[
  {
    "addresses": [
      "ebeb7e68309874380df3e383084ebb1f1c60674e",
      "b6f91606ba4e865378c7f20ec838aa6033e15393",
    ],
    "payload_hashes": [
      "a6be2b3aff4dd842dbc6324a7cc25611ca1e909f1d8885f8edb6a9dadc8f06a6",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "3700fe6a860b354d724c6ff595f89581f9f3f8c8ffcf8cf6175f08b851b19d47",
      "3700fe6a860b354d724c6ff595f89581f9f3f8c8ffcf8cf6175f08b851b19d47",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "e307ab9ba8ea876135ae22ff47114513cf7fefe024dab21d89d8584378df6b11",
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
      "4e2d335e7f54334b10e30706546f820a750974381586ec9aa2eca6f916249b25",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.test",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      "a3f55eb7fa86b336dfe77559209189c4731f286c45f0c7c8a0ed78aa9ecfd1db",
    ],
    "query": "4e2d335e7f54334b10e30706546f820a750974381586ec9aa2eca6f916249b25",
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist insert inserts single payload 1`] = `
[
  {
    "addresses": [
      "ebeb7e68309874380df3e383084ebb1f1c60674e",
      "b6f91606ba4e865378c7f20ec838aa6033e15393",
    ],
    "payload_hashes": [
      "d5d0b664d61848f0ea310ac71c79f76f9002d02241ba8f8d054b4145bd7b346b",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      null,
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
      "81b707afc5742a5501a4fac4ad56132928ce711de36de7aeda936e08066cfcad",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      "e307ab9ba8ea876135ae22ff47114513cf7fefe024dab21d89d8584378df6b11",
    ],
    "query": "81b707afc5742a5501a4fac4ad56132928ce711de36de7aeda936e08066cfcad",
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;
